--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="2026 Personal Finance Tracker - Manage your expenses and goals effectively. All Rights Reserved."
+      content="Smart Expense Tracker and Budget Advisor System - Manage your expenses and goals effectively. All Rights Reserved."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>2026 Personal Finance Tracker</title>
+    <title>Smart Expense Tracker and Budget Advisor System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <footer style="text-align: center; padding: 10px; background-color: #f1f1f1; position: fixed; bottom: 0; width: 100%;">
-      2026 Personal Finance Tracker
+    <footer style="text-align: center; padding: 15px; background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); position: fixed; bottom: 0; width: 100%; font-family: 'Poppins', sans-serif; font-weight: 500; color: #4F46E5; border-top: 1px solid rgba(79, 70, 229, 0.1); z-index: 1000;">
+      © 2026 Smart Expense Tracker and Budget Advisor System
     </footer>
   </body>
 </html>
